--- a/src/index.css
+++ b/src/index.css
@@ -7,15 +7,8 @@
   list-style: none;
   text-decoration: none;
 }
-/* 
-:root {
-  --color-bg: #1f1f38;
-  --color-bg-variant: #2c2c6c;
-  --color-primary: #4db5ff;
-  --color-primary-variant: rgba(77, 181, 255, 0.4);
-  --color-white: #fff;
-  --color-light: rgba(255, 255, 255, 0.6);
 
+:root {
   --shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
 
   --container-width-lg: 75%;
@@ -23,17 +16,22 @@
   --container-width-sm: 90%;
 
   --transition: all 0.5s ease;
-} */
+}
 
 html {
   scroll-behavior: smooth;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
-}
+} */
 
 body {
   font-family: "Cairo", sans-serif;
   line-height: 1.7;
+}
+
+.app {
+  background-color: #111;
+  color: white;
 }
